# Calcula

./: .gitignore  CMakeLists.txt  LICENSE.md  main.cpp
Formulas/: CMakeLists.txt  adder.cpp  adder.h  ball.cpp  ball.h  cube.cpp  cube.h  formulas.h
